--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <br>
 <table align="center">
 <td>
-	<a href="impressum.html">Impressum</a>
+	<a href="impressum">Impressum</a>
 </td>
 <td>
 </td>
