--- a/impressum/index.html
+++ b/impressum/index.html
@@ -41,33 +41,19 @@
 <b>Impressum</b>
 <br>
 <br>
-Marc Weikert<br>
-K&ouml;lner Landstra&szlig;e 201<br>
-4029 D&uuml;sseldorf<br>
-<br>
-marc(at)kaugummipunk.de
-<br>
-<br>
-<br>
 Markus Rosendahl<br>
 Braunfelsweg 22<br>
 40229 D&uuml;sseldorf<br>
 <br>
-markus(at)kaugummipunk.de
+contact.rsndhl@gmail.com
 <br>
 <br>
-<br>
-<br>
-<b>Disclaimer</b>
-<br>
-<br>
-Hiermit distanzieren wir uns ausdr&uuml;cklich von allen Inhalten aller gelinkten Seiten auf unserer Homepage und machen uns diese Inhalte nicht zu eigen. Diese Erkl&auml;rung gilt f&uuml;r alle auf dieser Webseite angebrachten Links.
 <br>
 <br>
 <b>Aufkleber</b>
 <br>
 <br>
-Weiterhin haften wir nicht f&uuml;r unsere Aufkleber, die unter anderem auch diese Webadresse enthalten. Diese Aufkleber werden von uns an Fans zur privaten Nutzung verteilt, mit der Belehrung, mit diesen nicht illegale Plakatierung zu betreiben. 
+Wir haften nicht f&uuml;r unsere Aufkleber, die unter anderem auch diese Webadresse enthalten. Diese Aufkleber werden von uns an Fans zur privaten Nutzung verteilt, mit der Belehrung, mit diesen nicht illegale Plakatierung zu betreiben. 
 </font>
 </div>
 </td>
@@ -78,7 +64,7 @@ Weiterhin haften wir nicht f&uuml;r unsere Aufkleber, die unter anderem auch die
 <br>
 <br>
 	<div align="center">
-	<a href="index.html">
+	<a href="/">
 	zur&uuml;ck
 	</a>
 	</div>
