updated image link

--- a/impressum/index.html
+++ b/impressum/index.html
@@ -27,7 +27,7 @@
     </head>
 <body>
 	<div align="center">
-	<a href="http://www.kaugummipunk.de">
+	<a href="/">
 	<img id="Logo" height=400 width=586 src="Bilder/Logo.jpg" border=0 alt="">
 	</a>
 	</div>
