removed unnecessary data and updated directories

--- a/impressum/index.html
+++ b/impressum/index.html
@@ -28,7 +28,7 @@
 <body>
 	<div align="center">
 	<a href="/">
-	<img id="Logo" height=400 width=586 src="Bilder/Logo.jpg" border=0 alt="">
+	<img id="Logo" height=400 width=586 src="/images/Logo.jpg" border=0 alt="">
 	</a>
 	</div>
 <br>
