--- a/index.html
+++ b/index.html
@@ -28,33 +28,33 @@
     </head>
 <body>
 	<a href="http://www.facebook.com/PravizaPhotography">
-	<img id="Logo" height=400 width=586 src="Bilder/VE_low.jpg" border=0 alt="">
+	<img id="Logo" height=400 width=586 src="images/VE.jpg" border=0 alt="">
 	</a>
 <br>
-	<img id="Text" height=73 width=586 src="Bilder/Text.jpg" border=0 alt="">
+	<img id="Text" height=73 width=586 src="images/Text.jpg" border=0 alt="">
 <table align="center">
 <tr>
 <td>
 	<a href="http://www.facebook.com/vollkommenegal">
-	<img id="Logo" height=192 width=288 src="Bilder/FB.gif" border=0 alt="">
+	<img id="Logo" height=192 width=288 src="images/FB.gif" border=0 alt="">
 	</a>
 	
 </td>
 <td>
 	<a href="http://www.youtube.com/vollkommenegalband">
-	<img id="Logo" height=192 width=288 src="Bilder/YT.gif" border=0 alt="">
+	<img id="Logo" height=192 width=288 src="images/YT.gif" border=0 alt="">
 	</a>
 </td>
 </tr>
 <tr>
 <td>
 	<a href="http://open.spotify.com/artist/3m0LMM1MUsMFaiO2wncvbN">
-	<img id="Logo" height=192 width=288 src="Bilder/SP.gif" border=0 alt="">
+	<img id="Logo" height=192 width=288 src="images/SP.gif" border=0 alt="">
 	</a>
 </td>
 <td>
 	<a href="http://www.instagram.com/kaugummipunk">
-	<img id="Logo" height=192 width=288 src="Bilder/IG.gif" border=0 alt="">
+	<img id="Logo" height=192 width=288 src="images/IG.gif" border=0 alt="">
 	</a>
 </td>
 </tr>
