--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <td>
 </td>
 <td>
-<a href="mailto:booking@kaugummipunk.de">Booking und Kontakt</a>
+<a href="mailto:contact.rsndhl@gmail.com">Booking und Kontakt</a>
 </td>
 <td>
 </td>
