added player and adjusted content

--- a/index.html
+++ b/index.html
@@ -28,33 +28,39 @@
     </head>
 <body>
 	<a href="http://www.facebook.com/PravizaPhotography">
-	<img id="Logo" height=400 width=586 src="images/VE.jpg" border=0 alt="">
+	<img id="Logo" height=360 width=586 src="images/VE.jpg" border=0 alt="">
 	</a>
 <br>
 	<img id="Text" height=73 width=586 src="images/Text.jpg" border=0 alt="">
+<br>
+<table align="center">
+<td>
+	<script type="text/javascript" src="https://api.uniqueopia.com/web-app/webapp.js?id=eF&key=OD"></script>
+	<div id="uniqueopia-webapp-container-eF" style="overflow: hidden !important; background: #00ff00 !important; width: 586px !important; height: 130px !important;"></div>
+</td>
 <table align="center">
 <tr>
 <td>
 	<a href="http://www.facebook.com/vollkommenegal">
-	<img id="Logo" height=192 width=288 src="images/FB.gif" border=0 alt="">
+	<img id="Logo" height=144 width=288 src="images/FB.gif" border=0 alt="">
 	</a>
 	
 </td>
 <td>
 	<a href="http://www.youtube.com/vollkommenegalband">
-	<img id="Logo" height=192 width=288 src="images/YT.gif" border=0 alt="">
+	<img id="Logo" height=144 width=288 src="images/YT.gif" border=0 alt="">
 	</a>
 </td>
 </tr>
 <tr>
 <td>
 	<a href="http://open.spotify.com/artist/3m0LMM1MUsMFaiO2wncvbN">
-	<img id="Logo" height=192 width=288 src="images/SP.gif" border=0 alt="">
+	<img id="Logo" height=144 width=288 src="images/SP.gif" border=0 alt="">
 	</a>
 </td>
 <td>
 	<a href="http://www.instagram.com/kaugummipunk">
-	<img id="Logo" height=192 width=288 src="images/IG.gif" border=0 alt="">
+	<img id="Logo" height=144 width=288 src="images/IG.gif" border=0 alt="">
 	</a>
 </td>
 </tr>
