changed contact email

--- a/impressum/index.html
+++ b/impressum/index.html
@@ -45,7 +45,7 @@ Markus Rosendahl<br>
 Braunfelsweg 22<br>
 40229 D&uuml;sseldorf<br>
 <br>
-contact.rsndhl@gmail.com
+kaugummipunk@gmail.com
 <br>
 <br>
 <br>
