added unpluggedrider and updated stagerider and linked both

--- a/index.html
+++ b/index.html
@@ -91,6 +91,17 @@
 </td>
 <td>
 	<a href="StageriderVE.pdf">Stagerider</a>
+	</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+</td>
+<td>
+	<a href="UnpluggedriderVE.pdf">Unpluggedrider</a>
 </td>
 </table>
 </body>
