--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <td>
 </td>
 <td>
-<a href="mailto:contact.rsndhl@gmail.com">Booking und Kontakt</a>
+<a href="mailto:kaugummipunk@gmail.com">Booking und Kontakt</a>
 </td>
 <td>
 </td>
