--- a/impressum/index.html
+++ b/impressum/index.html
@@ -1,4 +1,5 @@
-    <head>
+<html>    
+<head>
         <title>Vollkommen Egal - Kaugummipunk</title>
         <meta name="google" value="notranslate" />         
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -41,9 +42,7 @@
 <b>Impressum</b>
 <br>
 <br>
-Markus Rosendahl<br>
-Braunfelsweg 22<br>
-40229 D&uuml;sseldorf<br>
+Bei Fragen oder Anmerkungen, schreiben Sie gerne an:
 <br>
 kaugummipunk@gmail.com
 <br>
