updated imprint again

--- a/impressum/index.html
+++ b/impressum/index.html
@@ -42,7 +42,7 @@
 <b>Impressum</b>
 <br>
 <br>
-Bei Fragen oder Anmerkungen, schreiben Sie gerne an:
+Bei Fragen oder Anmerkungen schreiben Sie gerne an:
 <br>
 kaugummipunk@gmail.com
 <br>
