removed duplicate logos

--- a/sfk18/index.html
+++ b/sfk18/index.html
@@ -28,7 +28,7 @@
         </style>
     </head>
 <body>
-<a href="../index.html"><img id="Logo" height=200 width=200 src="Logo.jpg" border=0 alt=""></a>
+<a href="../index.html"><img id="Logo" height=200 width=200 src="../logos/skf18.jpg" border=0 alt=""></a>
 <br>
 <iframe width="576" height="324" src="https://www.youtube.com/embed/SVbb_Q-hv7w" frameborder="0" allowfullscreen></iframe>
 <br>
