--- a/thethes/index.html
+++ b/thethes/index.html
@@ -28,7 +28,7 @@
         </style>
     </head>
 <body>
-<a href="../index.html"><img id="Logo" width=640 src="logott.png" border=0 alt=""></a>
+<a href="../index.html"><img id="Logo" width=640 src="../logos/thethes.png" border=0 alt=""></a>
 <br>
 
 <br><br><br>
